fix petitions show on mobile

--- a/app/assets/stylesheets/petition.css.scss
+++ b/app/assets/stylesheets/petition.css.scss
@@ -26,6 +26,10 @@
 
 .petition {
   padding: 0 40px;
+  hr { display: none; }
+  @media (min-width: 250px) and (max-width: 767px) {
+    padding: 0 ;
+  }
   .header {
     min-height: 140px;
     margin-bottom: 8px;
